--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<!-- Apache Log4j Update Update 2.17.0 due to Vulnerability --> 
+		<!-- Apache Log4j Update 2.17.0 due to Vulnerability --> 
 		<log4j2.version>2.17.0</log4j2.version>
 	</properties>
 	<dependencies>
